# multi-converter

./: .gitignore  README.md  package.json  requirements.txt  run.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
frontend/src/lib/: tauri.ts  types.ts  utils.ts
frontend/src/pages/: history-page.tsx  models-page.tsx  settings-page.tsx  workbench-page.tsx
frontend/src/store/: app-store.ts
scripts/: build-installer.ps1  doctor.ps1  generate-logo.py  setup-windows.ps1  stage-ffmpeg-sidecar.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: history.rs  lib.rs  main.rs  settings.rs
worker/: cli.py  core.py  events.py
