[package]
name = "audio_to_text_desktop"
version = "0.1.0"
description = "Local desktop shell for audio and video transcription workflows"
authors = ["wangk"]
edition = "2021"

[lib]
name = "audio_to_text_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "5.0.1"
parking_lot = "0.12.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
